--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,20 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>ANT Cave</title>
+    <title>ANT 동아리 홈페이지</title>
+    <link rel="icon" href="{% static 'ant.png' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
-    <div class="page-header">
-        <h1> 개미 굴 </h1>
-    </div>
-    <div>
-        {% for foo in  %}
-        
-        {% endfor %}
-        
-    </div>
+
+    {% include 'header.html' %}
+
     {% block content %}
     {% endblock %}
+
+    {% include 'footer.html' %}
+
 </body>
 </html>
