--- a/templates/group_list.html
+++ b/templates/group_list.html
@@ -1,21 +1,12 @@
-<div class="group_box">
-    <a href="{% url 'pedigree' %}">
-        <div>족보 게시판</div>
-    </a>
-    <a href="{% url 'greetings' %}">
-        <div>가입인사</div>
-    </a>
-    <a href="{% url 'team' %}">
-        <div>팀 게시판</div>
-    </a>
-    <a href="{% url 'share' %}">
-        <div>정보 공유</div>
-    </a>
-    <a href="{% url 'ant_algo' %}">
-        <div>ANT 문제</div>
-    </a>
-    <a href="{% url 'compet_algo' %}">
-        <div>대회 문제</div>
-    </a>
-
+<div>
+    <nav class="group_box">
+        <ul>
+            <li><a href="{% url 'pedigree' %}">족보 게시판</a></li>
+            <li><a href="{% url 'greetings' %}">가입인사</a></li>
+            <li><a href="{% url 'team' %}">팀 게시판</a></li>
+            <li><a href="{% url 'share' %}">정보 공유</a></li>
+            <li><a href="{% url 'ant_algo' %}">ANT 문제</a></li>
+            <li><a href="{% url 'compet_algo' %}">대회 문제</a></li>
+        </ul>
+    </nav>
 </div>
