--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,9 @@
 {% include 'login.html' %}
 <div class="page-header">
     {% load staticfiles %}
-    <img src="{% static 'ant.png' %}"/>
+    <a href="{% url 'main' %}">
+        <img src="{% static 'ant.png' %}"/>
+    </a>
     <h1> ANT Site </h1>
 </div>
 
