--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,16 @@
 <div class="login">
-    <form method="POST" action="">
-        {% csrf_token %}
-        <span> ID : <input type="text" name="username" placeholder="아이디" /></span>
-        <span> PW : <input type="password" name="password" placeholder="비밀번호" /></span>
-        <button type="submit">로그인</button>
+    {% if user.is_authenticated %}
 
-    </form>
-    <form method="POST" action="{% url 'sign_up' %}">
-        {% csrf_token %}
-        <button type="submit">회원가입</button>
-    </form>
+    {% else %}
+        <form method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
+            <span> ID : <input type="text" name="username" placeholder="아이디" /></span>
+            <span> PW : <input type="password" name="password" placeholder="비밀번호" /></span>
+            <button type="submit">로그인</button>
+
+        </form>
+        <a href="{% url 'sign_up' %}">
+            <button>회원가입</button>
+        </a>
+    {% endif %}
 </div>
