--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 
 <article class="container">
         <div class="page-header">
-          <h1>회원가입 <small> 여기는 ANT 가입 페이지 입니다.</small></h1>
+          <h2>회원가입 <small> Sign up page</small></h2>
         </div>
 
    <div class="col-md-6 col-md-offset-3">
@@ -48,7 +48,7 @@
           <label for="register_phone">전화번호 * </label><input type="tel" class="form-control" name="register_phone" id="register_phone" placeholder=" - 없이 숫자만 입력해주세요" required></p>
       </div>
 <div class="form-group">
-    <label for="register_phone">재학 여부</label>
+    <label for="register_phone">재학 여부 (시간이 지나면 관리자에 의해 변경될 수 있습니다.)</label>
    <select name="is_attend"  class="form-control" style="width: 200px;">
         <option value="attend">재학</option>
         <option value="leave">휴학</option>
