회원가입 template과 form 수정

--- a/templates/group_list.html
+++ b/templates/group_list.html
@@ -6,7 +6,7 @@
             <li><a href="{% url 'team' %}">팀 게시판</a></li>
             <li><a href="{% url 'share' %}">정보 공유</a></li>
             <li><a href="{% url 'ant_algo' %}">ANT 문제</a></li>
-            <li><a href="{% url 'compet_algo' %}">대회 문제</a></li>
+            <li><a href="{% url 'compete_algo' %}">대회 문제</a></li>
         </ul>
     </nav>
 </div>
