--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-
     <article class="container">
         <div class="page-header">
             <h2>회원가입
@@ -28,4 +27,5 @@
 
             </form>
         </div>
+    </article>
 {% endblock %}
