게시판과 회원정보를 나눔, 마이페이지 및 회원정보부분 추가

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,11 @@
 <div class="page-header">
     {% load staticfiles %}
+    {% if user.is_authenticated %}
+        <span>{{ user.get_username }}님 환영합니다.</span>
+        <a href="{% url 'my_page' %}">마이 페이지</a>
+        <a href="{% url 'logout' %}">로그아웃</a>
+        <br>
+    {% endif %}
     <a href="{% url 'main' %}">
         <img src="{% static 'ant.png' %}"/>
     </a>
