--- a/templates/group_list.html
+++ b/templates/group_list.html
@@ -1,12 +1,15 @@
-<div>
-    <nav class="group_box">
-        <ul>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid" style="margin: 10px; font-size: large;">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'main' %}">ANT</a>
+        </div>
+        <ul class="nav navbar-nav">
             <li><a href="{% url 'pedigree' %}">족보 게시판</a></li>
-            <li><a href="{% url 'greetings' %}">가입인사</a></li>
-            <li><a href="{% url 'team' %}">팀 게시판</a></li>
-            <li><a href="{% url 'share' %}">정보 공유</a></li>
-            <li><a href="{% url 'ant_algo' %}">ANT 문제</a></li>
-            <li><a href="{% url 'compete_algo' %}">대회 문제</a></li>
+            <li><a href="{% url 'greetings:board' %}">가입인사</a></li>
+            <li><a href="{% url 'team:board' %}">팀 게시판</a></li>
+            <li><a href="{% url 'share:board' %}">정보 공유</a></li>
+            <li><a href="{% url 'ant_algo:board' %}">ANT 문제</a></li>
+            <li><a href="{% url 'compete_algo:board' %}">대회 문제</a></li>
         </ul>
-    </nav>
-</div>
+    </div>
+</nav>
