--- a/templates/board/pedigree.html
+++ b/templates/board/pedigree.html
@@ -46,6 +46,9 @@
             }
         }
     </script>
+<form method='post' action='' enctype="multipart/form-data">
+
+</form>
     <article class="container">
         <div class="page-header">
             <h3>
