iss12 navbar 수정, iss13 패스워드 레이아웃

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,3 +22,8 @@ By: dave-cheon
 .btn.active span.fa {
 	opacity: 1;
 }
+.navbar-brand>img{
+    height: 100%;
+    padding: 1510px;
+    width :auto;
+}
