--- a/templates/base.html
+++ b/templates/base.html
@@ -26,12 +26,13 @@
     <![endif]-->
 </head>
 <body>
+<div class = "center-block" style='width:80%;'>
     {% include 'header.html' %}
 
     {% block content %}
     {% endblock %}
 
     {% include 'footer.html' %}
-
+    </div>
 </body>
 </html>
