--- a/templates/profile/find_password.html
+++ b/templates/profile/find_password.html
@@ -8,7 +8,7 @@
             <div class="err-msg">{{ response }}</div>
             <form method="POST" class="form-inline">
                 {% csrf_token %}
-                <label for="{{ form.id.id_for_label }}">{{ form.id.label }} *</label>
+                <label for="{{ form.id.id_for_label }}">{{ form.id.label }} *</label><br/>
                 {{ form.id }}
                 <button type="submit" class="btn btn-info">확인<i class="fa fa-check spaceLeft"></i></button>
             </form>
