--- a/templates/group_list.html
+++ b/templates/group_list.html
@@ -1,8 +1,15 @@
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid" style="margin: 10px; font-size: large;">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'main' %}">ANT</a>
-        </div>
+{% load staticfiles %}
+
+<nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+        <button type = "button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-toggle">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Welcome ANT </a>
+    </div>
+    <div class="collapse navbar-collapse" id="nav-toggle">
 
         <ul class="nav navbar-nav">
             <li><a href="{% url 'pedigree' %}">족보 게시판</a></li>
@@ -12,5 +19,8 @@
             <li><a href="{% url 'ant_algo:board' %}">ANT 문제</a></li>
             <li><a href="{% url 'compete_algo:board' %}">대회 문제</a></li>
         </ul>
+        <form class="navbar-form navbar-right" role="search">
+            <input type="text" class="form-control" placeholder="Search">
+        </form>
     </div>
 </nav>
