--- a/templates/group_list.html
+++ b/templates/group_list.html
@@ -1,16 +1,27 @@
 {% load staticfiles %}
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
-        <button type = "button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-toggle">
+        <div class="navbar-brand">
+            {% if user.is_authenticated %}
+            <div class="dropdown-toggle" data-toggle="dropdown" href="#">
+                Welcome {{ user.get_username }} <span class="caret"></span>
+            </div>
+            <ul class="dropdown-menu nav navbar-nav navbar-right">
+                <li><a href="{% url 'my_page' %}"><span class="glyphicon glyphicon-user"></span> My page</a></li>
+                <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            </ul>
+            {%else%} ANT
+            {%endif%}
+        </div>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-toggle">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Welcome ANT </a>
     </div>
-    <div class="collapse navbar-collapse" id="nav-toggle">
 
+    <div class="collapse navbar-collapse" id="nav-toggle">
         <ul class="nav navbar-nav">
             <li><a href="{% url 'pedigree' %}">족보 게시판</a></li>
             <li><a href="{% url 'greetings:board' %}">가입인사</a></li>
@@ -19,8 +30,15 @@
             <li><a href="{% url 'ant_algo:board' %}">ANT 문제</a></li>
             <li><a href="{% url 'compete_algo:board' %}">대회 문제</a></li>
         </ul>
-        <form class="navbar-form navbar-right" role="search">
-            <input type="text" class="form-control" placeholder="Search">
+        <form class="navbar-form navbar-right" style="margin-right:10px;" action="/action_page.php">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search">
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                </div>
+            </div>
         </form>
     </div>
 </nav>
