--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -1,21 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <article class="container">
-        <div class="page-header">
-            <h3>
-                {{ b_name }}
-                <small> {{ b_name_e }}</small>
-            </h3>
-        </div>
-        <div>
-            <div class="col-md-6 col-md-offset-3">
-                <h4>{{ content.title }} <small>{{ content.writer }}</small></h4>
-
+<article class="container">
+    <div class="page-header">
+        <h3>
+            {{ b_name }}
+            <small> {{ b_name_e }}</small>
+        </h3>
+    </div>
+    <div>
+        <div class="col-md-6 col-md-offset-3">
+            <h4>{{ content.title }}
+                <small>{{ content.writer }}</small>
+                <small> {{ content.}}</small>
+            </h4>
+            <div class = "">
                 <p>{{ content.text }}</p>
-
-                {# TODO : 여기 구성좀 해주세요. #}
             </div>
+            {# TODO : 여기 구성좀 해주세요. #}
         </div>
-    </article>
+    </div>
+</article>
 {% endblock %}
