--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,64 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
+
+<div class="container">
+    <h3> ANT 홈페이지입니다. </h3>
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+      {% load staticfiles %}
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="{% static 'ant17.png' %}" alt="Chania" width="100%">
+        <div class="carousel-caption">
+          <h3>ANT 란?</h3>
+          <p>알고리즘 공부하는 동아리입니다.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="{% static 'codershigh.jpg' %}" alt="Flower" width="100%" >
+        <div class="carousel-caption">
+          <h3>대회</h3>
+          <p>도 나가요.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="{% static 'ANT_thinking.jpg' %}" alt="Poster" height="100%">
+        <div class="carousel-caption">
+          <h3>대회도 열어요</h3>
+          <p>진짜로 believe it!</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="{% static 'SDS.jpg' %}" alt="description" height="100%">
+        <div class="carousel-caption">
+          <h3>취업 설명회 개최</h3>
+          <p>취업하려면 알고리즘 하세요.</p>
+        </div>
+      </div>
 
     </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
 {% endblock %}
