--- a/templates/main.html
+++ b/templates/main.html
@@ -3,9 +3,27 @@
 {% block content %}
 
 <div class="container">
-    <h3> ANT 홈페이지입니다. </h3>
+    <h3 data-toggle="modal" data-target="#myModal"> ANT 홈페이지입니다. </h3>
+     <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">현재 개발 중입니다.</h4>
+        </div>
+        <div class="modal-body">
+          <a href="https://github.com/CNU-ANT/ANT-Cave">ANT-Cave</a>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div style="width=50%">
+  <div id="myCarousel" class="carousel slide "  data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -15,9 +33,9 @@
     </ol>
       {% load staticfiles %}
     <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
+    <div class="carousel-inner" role="listbox" >
       <div class="item active">
-        <img src="{% static 'ant17.png' %}" alt="Chania" width="100%">
+        <img src="{% static 'asset_main/ant17.png' %}" class="img-responsive img-rounded" alt="Chania" width="100%">
         <div class="carousel-caption">
           <h3>ANT 란?</h3>
           <p>알고리즘 공부하는 동아리입니다.</p>
@@ -25,7 +43,7 @@
       </div>
 
       <div class="item">
-        <img src="{% static 'codershigh.jpg' %}" alt="Flower" width="100%" >
+        <img src="{% static 'asset_main/codershigh.jpg' %}" class="img-responsive img-rounded" alt="Flower" width="100%" >
         <div class="carousel-caption">
           <h3>대회</h3>
           <p>도 나가요.</p>
@@ -33,7 +51,7 @@
       </div>
 
       <div class="item">
-        <img src="{% static 'ANT_thinking.jpg' %}" alt="Poster" height="100%">
+        <img src="{% static 'asset_main/ANT_thinking.jpg' %}" class="img-responsive img-rounded" alt="Poster" height="100%">
         <div class="carousel-caption">
           <h3>대회도 열어요</h3>
           <p>진짜로 believe it!</p>
@@ -41,7 +59,7 @@
       </div>
 
       <div class="item">
-        <img src="{% static 'SDS.jpg' %}" alt="description" height="100%">
+        <img src="{% static 'asset_main/SDS.jpg' %}" class="img-responsive img-rounded" alt="description" height="100%">
         <div class="carousel-caption">
           <h3>취업 설명회 개최</h3>
           <p>취업하려면 알고리즘 하세요.</p>
@@ -51,14 +69,15 @@
     </div>
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <a class="left carousel-control" style="background:none" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <a class="right carousel-control" style="background:none" href="#myCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
 </div>
+    </div>
 {% endblock %}
