nav bar link 수정

--- a/templates/group_list.html
+++ b/templates/group_list.html
@@ -6,7 +6,7 @@
         <div class="navbar-header">
             <div class="navbar-brand">
                 {% if user.is_authenticated %}
-                <a href="#" style="text-decoration:none">Welcome </a>
+                <a href="/" style="text-decoration:none">Welcome </a>
                 <span class="dropdown-toggle" data-toggle="dropdown" href="#">
                 {{ user.get_username }} <span class="caret"></span>
                 </span>
