--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -8,16 +8,25 @@
             <small> {{ b_name_e }}</small>
         </h3>
     </div>
-    <div>
-        <div class="col-md-6 col-md-offset-3">
-            <h4>{{ content.title }}
-                <small>{{ content.writer }}</small>
-                <small> {{ content.}}</small>
-            </h4>
-            <div class = "">
-                <p>{{ content.text }}</p>
-            </div>
-            {# TODO : 여기 구성좀 해주세요. #}
+    <div class="col-md-8 col-md-offset-1 ">
+        <h3>{{ content.title }}
+
+        </h3>
+        <h4>
+            <small>작성자 : {{ content.writer }}</small>
+            <small class="pull-right "> {{ content.create_date}}</small>
+        </h4>
+        <hr>
+        <div class="">
+            <p style="height:300px">{{ content.text }}</p>
+
+        </div>
+        <div class="form-group text-center">
+            <div class="err-msg">{{ response }}</div>
+            <button type="submit" class="btn btn-info">작성완료<i class="fa fa-check spaceLeft"></i></button>
+            <a href="{{ namespace }}">
+                <button type="button" class="btn btn-warning">취소<i class="fa fa-times spaceLeft"></i></button>
+            </a>
         </div>
     </div>
 </article>
