파일 업로드 기능 추가
글을 새로 작성하는 경우 파일을 다중으로 업로드 할 경우
모두 올라갈 수 있게 하였고 게시글을 들어가서 파일이름을 클릭시
파일을 받을 수 있게 만들었습니다.
또한 Media_URL을 이용해 Meida 폴더에 파일이 계속 추가되게 하였고
각 게시판, 게시글을 인자로 받아 폴더로 나누어
파일을 관리할 수 있게 만들었습니다.

Fixes https://github.com/CNU-ANT/ANT-Cave/issues/20 and
Closes https://github.com/CNU-ANT/ANT-Cave/issues/57

--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -21,6 +21,12 @@
             <p style="height:300px">{{ content.text }}</p>
 
         </div>
+        {% for file in files %}
+        <div class="">
+            <a href="{{ file.url }}" download>{{ file.filename }}</a><br>
+        </div>
+        {% endfor %}
+
         <div class="form-group text-center">
             <div class="err-msg">{{ response }}</div>
             <button type="submit" class="btn btn-info">작성완료<i class="fa fa-check spaceLeft"></i></button>
