--- a/templates/board/edit_post.html
+++ b/templates/board/edit_post.html
@@ -11,7 +11,7 @@
         </div>
         <div>
             <div class="col-md-6 col-md-offset-3">
-                <form role="form" method="POST">
+                <form role="form" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for input in form %}
                         <div class="form-group">
