--- a/templates/group_list.html
+++ b/templates/group_list.html
@@ -3,8 +3,9 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand">
+
                 {% if user.is_authenticated %}
+                <div class="navbar-brand">
                 <a href="/" style="text-decoration:none">Welcome </a>
                 <span class="dropdown-toggle" data-toggle="dropdown" href="#">
                 {{ user.get_username }} <span class="caret"></span>
@@ -13,9 +14,10 @@
                     <li><a href="{% url 'my_page' %}"><i class="glyphicon glyphicon-user"></i> My page</a></li>
                     <li><a href="{% url 'logout' %}"><i class="glyphicon glyphicon-log-in"></i> Logout</a></li>
                 </ul>
-                {%else%} ANT
+                </div>
+                {%else%} <a class="navbar-brand" href="{% url 'main' %}">ANT</a>
                 {%endif%}
-            </div>
+
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-toggle">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
