--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -21,6 +21,12 @@
             <p style="height:300px">{{ content.text }}</p>
 
         </div>
+        {% for file in files %}
+        <div class="">
+            <a href="{{ file.url }}" download>{{ file.filename }}</a><br>
+        </div>
+        {% endfor %}
+      
         <a href="{{ edit }}"><button>수정</button></a>
     </div>
 </article>
