--- a/templates/board/edit_post.html
+++ b/templates/board/edit_post.html
@@ -21,9 +21,8 @@
                     {% endfor %}
                     <br>
                     <div class="form-group text-center">
-                        <div class="err-msg">{{ response }}</div>
                         <button type="submit" class="btn btn-info">작성완료<i class="fa fa-check spaceLeft"></i></button>
-                        <a href="{{ namespace }}">
+                        <a href="{{ board }}">
                             <button type="button" class="btn btn-warning">취소<i class="fa fa-times spaceLeft"></i></button>
                         </a>
                     </div>
