잘못 merge 된 부분 수정
Main , 파일

--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -28,6 +28,14 @@
                 <button type="button" class="btn btn-warning">취소<i class="fa fa-times spaceLeft"></i></button>
             </a>
         </div>
+        {% for file in files %}
+        <div class="">
+            <a href="{{ file.url }}" download>{{ file.filename }}</a><br>
+
+        </div>
+        {% endfor %}
+      
+        <a href="{{ edit }}"><button>수정</button></a>
     </div>
 </article>
 {% endblock %}
