--- a/templates/profile/edit_info.html
+++ b/templates/profile/edit_info.html
@@ -11,30 +11,33 @@
             {{ err }}
             <form role="form" method="POST">
                 {% csrf_token %}
-                <label>아이디 : </label>{{ user.username }}<br>
-                <label>이메일 : </label>{{ user.email }}<br>
-
-                <div class="form-group">
+                <div style="margin-top: 3em;">
+                <ul class="list-group">
+                    <li class="list-group-item"><span class="badge">아이디</span>{{ user.username }}</li>
+                    <li class="list-group-item"><span class="badge">이메일</span>{{ user.email }}</li>
+                <div style="margin-top: 1em;" class="form-group">
                     <label for="{{ form.name.id_for_label }}">{{ form.name.label }} *</label>
                     {{ form.name }}
                 </div>
-
-                <label>학번 : </label>{{ user_info.user_num }}<br>
-                <div class="form-group">
+                    <li class="list-group-item"><span class="badge">학번</span>{{ user_info.user_num }}</li>
+                <div style="margin-top: 1em;" class="form-group">
                     <label for="{{ form.phone.id_for_label }}">{{ form.phone.label }} *</label>
                     {{ form.phone }}
                 </div>
-                <div class="form-group">
+                <div style="margin-top: 1em;" class="form-group">
                     <label for="{{ form.is_attend.id_for_label }}">{{ form.is_attend.label }} *</label>
                     {{ form.is_attend }}
                 </div>
-                <label>가입일자 : </label>{{ user_info.signup_date }}<br>
-
+                    <li class="list-group-item"><span class="badge">가입일자</span>{{ user_info.signup_date }}</li>
+                </ul>
+                </div>
+                <div style="margin-left: 35%; margin-top: 3em;">
                 <button type="submit" class="btn btn-info">회원정보 수정<i class="fa fa-check spaceLeft"></i></button>
 
                 <a href="{% url 'my_page' %}">
                     <button type="button" class="btn btn-warning">취소<i class="fa fa-times spaceLeft"></i></button>
                 </a>
+                </div>
             </form>
         </div>
     </article>
