--- a/templates/profile/my_page.html
+++ b/templates/profile/my_page.html
@@ -7,20 +7,24 @@
             </h2>
         </div>
 
-        <div class="col-md-6 col-md-offset-3">
-            <label>아이디 : </label>{{ user.username }}<br>
-            <label>이메일 : </label>{{ user.email }}<br>
-            <label>이름 : </label>{{ user_info.user_name }}<br>
-            <label>학번 : </label>{{ user_info.user_num }}<br>
-            <label>전화번호 : </label>{{ user_info.user_phone }}<br>
-            <label>재학여부 : </label>{{ is_attend }}<br>
-            <label>가입일자 : </label>{{ user_info.signup_date }}<br>
-            <a href="{% url 'edit_my_page' %}">
-                <button type="button" class="btn btn-info">회원정보 수정<i class="fa fa-check spaceLeft"></i></button>
-            </a>
-            <a href="{% url 'main' %}">
-                <button type="button" class="btn btn-warning">취소<i class="fa fa-times spaceLeft"></i></button>
-            </a>
+        <div style="margin-top: 3em;" class="col-md-6 col-md-offset-3">
+            <ul class="list-group">
+                <li class="list-group-item"><span class="badge">아이디</span>{{ user.username }}</li>
+                <li class="list-group-item"><span class="badge">이메일</span>{{ user.email }}</li>
+                <li class="list-group-item"><span class="badge">이름</span>{{ user_info.user_name }}</li>
+                <li class="list-group-item"><span class="badge">학번</span>{{ user_info.user_num }}</li>
+                <li class="list-group-item"><span class="badge">전화번호</span>{{ user_info.user_phone }}</li>
+                <li class="list-group-item"><span class="badge">재학여부</span>{{ is_attend }}</li>
+                <li class="list-group-item"><span class="badge">가입일자</span>{{ user_info.signup_date }}</li>
+            </ul>
+            <div style="margin-left: 35%; margin-top: 3em;">
+                <a href="{% url 'edit_my_page' %}">
+                    <button type="button" class="btn btn-info">회원정보 수정<i class="fa fa-check spaceLeft"></i></button>
+                </a>
+                <a href="{% url 'main' %}">
+                    <button type="button" class="btn btn-warning">취소<i class="fa fa-times spaceLeft"></i></button>
+                </a>
+            </div>
         </div>
     </article>
 {% endblock %}
