파일에 파일 아이콘을 붙임
파일에 임시적으로 아이콘을 붙여서 파일임을 표시함.

Closes https://github.com/CNU-ANT/ANT-Cave/issues/76

--- a/templates/board/detail.html
+++ b/templates/board/detail.html
@@ -21,12 +21,12 @@
             <p style="height:300px">{{ content.text }}</p>
 
         </div>
+        <ul class="list-group">
         {% for file in files %}
-        <div class="">
-            <a href="{{ file.url }}" download>{{ file.filename }}</a><br>
-        </div>
+            <li class="list-group-item"><a href="{{ file.url }}" download><i class="fa fa-file"></i> {{ file.filename }}</a></li>
         {% endfor %}
-      
+        </ul>
+
         <a href="{{ edit }}"><button>수정</button></a>
     </div>
 </article>
