메인 홈페이지의 이미지 슬라이드가 바뀔 시 홈페이지 크기가 바뀌는 현상 해결
자바스크립트를 추가하여 이미지 슬라이드를 감싸는 div의 크기를  각 이미지마다 가지고 있는 최대 크기로 고정하였습니다.

[Fixed][https://github.com/CNU-ANT/ANT-Cave/issues/90]

--- a/templates/main.html
+++ b/templates/main.html
@@ -64,7 +64,9 @@
                         </div>
                     </div>
 
-                    <div class="item">
+                    <div class="item"> ! [remote rejected] master -> master (protected branch hook declined) ! [remote rejected] master -> master (protected branch hook declined)
+
+
                         <img src="{% static 'asset_main/SDS.jpg' %}" class="img-responsive img-rounded" alt="description"
                              height="100%">
                         <div class="carousel-caption">
@@ -88,7 +90,9 @@
                         console.log(carousel_inner[0].parentNode.parentNode);
                         carousel_inner[0].parentNode.parentNode.style.height = height+"px";
                     </script>
-                </div>
+                </div> ! [remote rejected] master -> master (protected branch hook declined)
+ ! [remote rejected] master -> master (protected branch hook declined)
+
 
                 <!-- Left and right controls -->
                 <a class="left carousel-control" style="background:none" href="#myCarousel" role="button" data-slide="prev">
