--- a/templates/main.html
+++ b/templates/main.html
@@ -24,67 +24,89 @@
     <br>
 
     <div style="width=50%">
-        <div id="myCarousel" class="carousel slide " data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-                <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
-            {% load staticfiles %}
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="{% static 'asset_main/ant17.png' %}" class="img-responsive img-rounded" alt="Chania"
-                         width="100%">
-                    <div class="carousel-caption">
-                        <h3>ANT 란?</h3>
-                        <p>알고리즘 공부하는 동아리입니다.</p>
-                    </div>
-                </div>
+        <section>
+            <div id="myCarousel" class="carousel slide " data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
+                {% load staticfiles %}
+                <!-- Wrapper for slides -->
 
-                <div class="item">
-                    <img src="{% static 'asset_main/codershigh.jpg' %}" class="img-responsive img-rounded" alt="Flower"
-                         width="100%">
-                    <div class="carousel-caption">
-                        <h3>대회</h3>
-                        <p>도 나가요.</p>
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="{% static 'asset_main/ant17.png' %}" class="img-responsive img-rounded" alt="Chania"
+                             width="100%">
+                        <div class="carousel-caption">
+                            <h3>ANT 란?</h3>
+                            <p>알고리즘 공부하는 동아리입니다.</p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="item">
-                    <img src="{% static 'asset_main/ANT_thinking.jpg' %}" class="img-responsive img-rounded"
-                         alt="Poster" height="100%">
-                    <div class="carousel-caption">
-                        <h3>대회도 열어요</h3>
-                        <p>진짜로 believe it!</p>
+                    <div class="item">
+                        <img src="{% static 'asset_main/codershigh.jpg' %}" class="img-responsive img-rounded" alt="Flower"
+                             width="100%">
+                        <div class="carousel-caption">
+                            <h3>대회</h3>
+                            <p>도 나가요.</p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="item">
-                    <img src="{% static 'asset_main/SDS.jpg' %}" class="img-responsive img-rounded" alt="description"
-                         height="100%">
-                    <div class="carousel-caption">
-                        <h3>취업 설명회 개최</h3>
-                        <p>취업하려면 알고리즘 하세요.</p>
+                    <div class="item">
+                        <img src="{% static 'asset_main/ANT_thinking.jpg' %}" class="img-responsive img-rounded"
+                             alt="Poster" height="100%">
+                        <div class="carousel-caption">
+                            <h3>대회도 열어요</h3>
+                            <p>진짜로 believe it!</p>
+                        </div>
                     </div>
-                </div>
 
+                    <div class="item"> ! [remote rejected] master -> master (protected branch hook declined) ! [remote rejected] master -> master (protected branch hook declined)
+
+
+                        <img src="{% static 'asset_main/SDS.jpg' %}" class="img-responsive img-rounded" alt="description"
+                             height="100%">
+                        <div class="carousel-caption">
+                            <h3>취업 설명회 개최</h3>
+                            <p>취업하려면 알고리즘 하세요.</p>
+                        </div>
+                    </div>
+                    <script>
+                        var carousel_inner = document.getElementsByClassName("carousel-inner");
+                        var height = -1;
+                        for(var child_idx in carousel_inner[0].childNodes){
+                            try {
+                                console.log(carousel_inner[0].childNodes[child_idx].childNodes[1].height);
+                                if (carousel_inner[0].childNodes[child_idx].childNodes[1].height > height) {
+                                    height = carousel_inner[0].childNodes[child_idx].childNodes[1].height;
+                                }
+                            }catch{
+                                continue;
+                            }
+                        }
+                        console.log(carousel_inner[0].parentNode.parentNode);
+                        carousel_inner[0].parentNode.parentNode.style.height = height+"px";
+                    </script>
+                </div> ! [remote rejected] master -> master (protected branch hook declined)
+ ! [remote rejected] master -> master (protected branch hook declined)
+
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" style="background:none" href="#myCarousel" role="button" data-slide="prev">
+
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" style="background:none" href="#myCarousel" role="button"
+                   data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" style="background:none" href="#myCarousel" role="button" data-slide="prev">
-
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" style="background:none" href="#myCarousel" role="button"
-               data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+        </section>
     </div>
 </div>
 
